Enhance floating button feature documentation
Updated floating button documentation with images and links.

--- a/content/features/floatingButton.mdx
+++ b/content/features/floatingButton.mdx
@@ -12,7 +12,10 @@ A persistent, draggable button that floats above all windows for one-click sideb
 
 ## How It Works
 
-[PLACEHOLDER: Screenshot showing small floating button in corner of screen]
+<br />
+<p align="center">
+  <img src="/assets/floatingButton.jpeg" alt="Floating Button" width="800" />
+</p>
 
 The Floating Button is a small, semi-transparent button that stays visible above all other windows. Click it once to toggle the sidebar - no keyboard needed.
 
@@ -29,8 +32,13 @@ The Floating Button is a small, semi-transparent button that stays visible above
 - Position persists across app restarts
 - Move to corners, edges, or anywhere you prefer
 - Works across multiple displays
+<p>
+  Watch this video:
+  <a href="https://youtu.be/DgkGX2eQzq4" target="_blank">
+Floatin Button Drag
+  </a>
+</p>
 
-[PLACEHOLDER: Video showing user dragging floating button to different positions]
 
 ## Setup
 
@@ -39,8 +47,10 @@ The Floating Button is a small, semi-transparent button that stays visible above
 1. Open **Preferences → General**
 2. Enable **Show floating button**
 3. Button appears immediately
-
-[PLACEHOLDER: Screenshot of floating button toggle in preferences]
+<br />
+<p align="center">
+  <img src="/assets/Floating Button Toggle" alt="Floating Button Toggle" width="800" />
+</p>
 
 ### No Permissions Required
 
@@ -55,8 +65,13 @@ The floating button works without any special permissions - just toggle it on an
 - Sidebar visible → Click button → Sidebar hides
 
 Simple, predictable toggle behavior.
+<p>
+  Watch this video:
+  <a href="https://youtu.be/DgkGX2eQzq4" target="_blank">
+    Floating Button Open
+  </a>
+</p>
 
-[PLACEHOLDER: Video showing clicking button and sidebar responding]
 
 ### Repositioning
 
@@ -114,7 +129,6 @@ No customization options - optimized for minimal distraction.
 - Away from Dock
 - Alternative for left-handed workflows
 
-[PLACEHOLDER: Diagram showing common button positions on screen]
 
 ## Combining Access Methods
 
@@ -203,7 +217,6 @@ If the floating button isn't for you, try:
 - Sidebar appears automatically when browsers activate
 - See [Browser Integration](browserIntegration#browser-auto-visibility)
 
-[PLACEHOLDER: Comparison table of all access methods]
 
 ## Troubleshooting
 
