Enhance global shortcuts section with media content
Updated global shortcuts documentation with video links and images.

--- a/content/features/globalShortcuts.mdx
+++ b/content/features/globalShortcuts.mdx
@@ -12,7 +12,13 @@ System-wide keyboard shortcuts for instant access to SupaSidebar from any applic
 
 ## How It Works
 
-[PLACEHOLDER: Video showing user in different apps pressing shortcuts and SupaSidebar responding]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/UQdXah3G1R0" target="_blank">
+    Shortcut Use
+  </a>
+</p>
+
 
 Global shortcuts work from anywhere on your Mac - whether you're in a browser, text editor, terminal, or design tool. Press the shortcut combination and SupaSidebar responds immediately.
 
@@ -73,8 +79,10 @@ Unlike application-specific shortcuts, global shortcuts are **always active**:
 | *Not set* | None | Create New Link (Global) |
 
 *Configure in Preferences → Shortcuts*
-
-[PLACEHOLDER: Table showing all shortcuts organized by category]
+<br />
+<p align="center">
+  <img src="Global Shortcuts.jpeg" alt="Global shortcut" width="800" />
+</p>
 
 ## Customizing Shortcuts
 
@@ -85,7 +93,7 @@ Unlike application-specific shortcuts, global shortcuts are **always active**:
 3. Press your desired key combination
 4. New shortcut is saved automatically
 
-[PLACEHOLDER: Screenshot of shortcuts preferences with recording UI]
+
 
 ### Shortcut Requirements
 
@@ -153,8 +161,12 @@ See [Browser Integration](browserIntegration) and [Finder Integration](finderInt
 8. Repeat
 
 All without touching mouse.
-
-[PLACEHOLDER: Video demonstrating keyboard-only research workflow]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/mbXoDgDRlvk" target="_blank">
+    Workflow
+  </a>
+</p>
 
 ### Quick Access Workflow
 
