Enhance liveTabs documentation with new content
Updated liveTabs.mdx to include new features and screenshots.

--- a/content/features/liveTabs.mdx
+++ b/content/features/liveTabs.mdx
@@ -11,8 +11,11 @@ Real-time mirror of your currently open browser tabs directly in the sidebar - s
 - **Work overview**: See all your active work at a glance across all browsers
 
 ## How It Works
+<br />
+<p align="center">
+  <img src="/assets/lifetabsmultiplebrowser.jpeg" alt="Life Tabs in Multiple Browsers" width="800" />
+</p>
 
-[PLACEHOLDER: Screenshot showing live tabs section in sidebar with tabs from multiple browsers]
 
 Live Tabs continuously monitors your supported browsers and displays all open tabs in real-time within the sidebar. Each tab shows its title, URL, and browser icon.
 
@@ -25,8 +28,13 @@ Checks browsers every 0.75 seconds for tab updates via AppleScript.
 
 **Accessibility Observer** (Direct Distribution only)
 Instant updates using macOS Accessibility API when tabs are created, switched, or closed - no polling delay.
+<p>
+  Watch this video:
+  <a href="https://youtu.be/ia_F8vYHoUs" target="_blank">
+    Live Tab
+  </a>
+</p>
 
-[PLACEHOLDER: Video showing live tabs updating in real-time as user opens/closes browser tabs]
 
 ### Multi-Browser Support
 
@@ -48,7 +56,10 @@ Live Tabs works across all supported browsers simultaneously:
 - Arc
 - Dia
 
-[PLACEHOLDER: Screenshot showing tabs from Safari, Chrome, and Edge all appearing in sidebar]
+<br />
+<p align="center">
+  <img src="/assets/lifetabsmultiplebrowser.jpeg" alt="Life Tabs in Multiple Browsers" width="800" />
+</p>
 
 ### Browser Order Customization
 
@@ -66,7 +77,12 @@ Organize which browsers appear first in your live tabs list:
 2. Toggle **Live Tabs** mode
 3. Grant browser permissions when prompted
 
-[PLACEHOLDER: Screenshot of Live Tabs toggle in preferences]
+
+<br />
+<p align="center">
+  <img src="/assets/Live Tap Option.jpeg" alt="Life Tabs" width="800" />
+</p>
+
 
 ### Required Permissions
 
@@ -100,7 +116,13 @@ In the sidebar, live tabs appear in the **Recents** section (when Live Tabs mode
 2. Type tab title or URL
 3. Press **Return** to switch
 
-[PLACEHOLDER: Video showing user searching for tab in command panel and switching to it]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/ia_F8vYHoUs" target="_blank">
+  Live Tab Update
+  </a>
+</p>
+
 
 ### Close Tabs
 
@@ -115,7 +137,6 @@ When Live Tabs is enabled and you open a link from SupaSidebar:
 
 This keeps your tab count manageable and prevents duplicate research tabs.
 
-[PLACEHOLDER: Screenshot showing tab reuse notification]
 
 ## Space-Filtered Tabs (Premium)
 
