Enhance recentItems documentation with images and links
Updated recentItems.mdx with new images and links.

--- a/content/features/recentItems.mdx
+++ b/content/features/recentItems.mdx
@@ -11,8 +11,11 @@ Automatic tracking of your browsing history across all supported browsers - see 
 - **Browse patterns**: Discover patterns in your browsing habits
 
 ## How It Works
+<br />
+<p align="center">
+  <img src="/assets/recent itmes.jpeg" alt="Recent History" width="800" />
+</p>
 
-[PLACEHOLDER: Screenshot showing recent items section in sidebar with browser icons]
 
 Recent Items automatically monitors your browsers and tracks pages you visit. No manual saving required - just browse normally and SupaSidebar captures your history.
 
@@ -26,7 +29,13 @@ Real-time tracking using macOS Accessibility API - instant updates when you navi
 **Polling Mode** (All versions)
 Periodic checks every few seconds via AppleScript.
 
-[PLACEHOLDER: Video showing user browsing and pages appearing in recent items]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/H8gxuPMwseA" target="_blank">
+    recent items
+  </a>
+</p>
+
 
 ### Multi-Browser Support
 
@@ -51,8 +60,11 @@ See [Browser Integration](browserIntegration) for complete list.
 1. Open **Preferences → Recents**
 2. Ensure mode is set to **Recent Items** (not Live Tabs)
 3. Configure display limit (default: 30 items)
+<br />
+<p align="center">
+  <img src="/assets/select recent intems.jpeg" alt="select "recent items" option.jpeg" width="800" />
+</p>
 
-[PLACEHOLDER: Screenshot of Recents preferences]
 
 ### Required Permissions
 
@@ -64,8 +76,10 @@ Recent Items requires **Automation permissions**:
 
 For real-time tracking (Direct Distribution):
 - **System Settings → Privacy & Security → Accessibility** → Enable SupaSidebar
-
-[PLACEHOLDER: Screenshot showing automation permissions]
+<br />
+<p align="center">
+  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
+</p>
 
 ### Configure Display Limit
 
@@ -89,8 +103,6 @@ Recent items appear in the sidebar's **Recents** section, showing:
 
 Sorted by most recent first.
 
-[PLACEHOLDER: Screenshot showing recent items with timestamps and browser icons]
-
 ### Opening Recent Pages
 
 **From Sidebar:**
@@ -103,7 +115,14 @@ Sorted by most recent first.
 3. Recent items appear in search results
 4. Press **Return** to open
 
-[PLACEHOLDER: Video showing searching recent items in command panel]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/g_8Dfq_RSWI" target="_blank">
+   Recent History Command Panel
+  </a>
+</p>
+
+
 
 ### Saving Recent Items
 
