Enhance sidebar.mdx with images and feature details
Updated sidebar documentation with images and descriptions.

--- a/content/features/sidebar.mdx
+++ b/content/features/sidebar.mdx
@@ -11,7 +11,10 @@ A lightweight, always-accessible floating panel that gives you instant access to
 
 ## How It Works
 
-[PLACEHOLDER: Screenshot showing the sidebar panel open on the left side of screen with links organized in folders]
+<br />
+<p align="center">
+  <img src="/assets/default position of sidebar.jpeg" alt="Default position of sidebar" width="800" />
+</p>
 
 The Sidebar Panel is a floating window that sits on the edge of your screen, ready to appear with a single keystroke. It organizes all your saved content in an easy-to-navigate interface with folders, search, and quick actions.
 
@@ -25,14 +28,19 @@ The sidebar intelligently positions itself on whichever screen you're currently 
 - Toggle between sides instantly with a keyboard shortcut
 - Sidebar remembers your preference for each screen
 
-[PLACEHOLDER: Video showing sidebar toggling between left and right sides]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/_P0FHN9yJpg" target="_blank">
+    Sidebar toggle
+  </a>
+</p>
+
+
 
 **Smart Behavior**
 - **Auto-hide**: Sidebar can automatically hide when you click outside of it
 - **Opacity adjustment**: Reduce visual distraction when the sidebar loses focus
 - **Pin to spaces**: Make the sidebar follow you across all macOS desktop spaces, or keep it anchored to specific workspaces
-
-[PLACEHOLDER: Screenshot showing opacity difference between focused and unfocused sidebar]
 
 **Resizable & Draggable**
 Customize the sidebar to fit your workflow:
@@ -50,8 +58,10 @@ The sidebar works out of the box with default settings. To customize:
    - **Auto-hide on deactivate**: Hide sidebar when clicking outside
    - **Opacity on focus change**: Reduce opacity when not focused
    - **Sidebar side**: Choose left or right side (or use ⌘⌃L shortcut)
-
-[PLACEHOLDER: Screenshot of General preferences showing sidebar settings]
+<br />
+<p align="center">
+  <img src="/assets/default sidebar position.jpeg" alt="default sidebar position.jpeg" width="800" />
+</p>
 
 ## Keyboard Shortcuts
 
