Clean up placeholder content in smartShortcuts.mdx
Removed placeholder text for video and screenshot references in the smartShortcuts documentation.

--- a/content/features/smartShortcuts.mdx
+++ b/content/features/smartShortcuts.mdx
@@ -12,8 +12,12 @@ Context-aware keyboard shortcuts that adapt based on your active application - s
 - **Context switching**: Work seamlessly between browser and Finder tasks
 
 ## How It Works
-
-[PLACEHOLDER: Video showing Smart Save being used in browser, then Finder, demonstrating context-awareness]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/w5AMO-wkIgo" target="_blank">
+ Smart Copy and Save
+  </a>
+</p>
 
 Smart Shortcuts detect which application is currently active and adapt their behavior automatically. No need to remember different shortcuts for different apps - **⌘⌃S** and **⌘⌃C** do the right thing based on context.
 
@@ -44,7 +48,6 @@ Press **⌘⌃S** while browsing to instantly capture the current page:
 - Timestamp
 - Browser that was active
 
-[PLACEHOLDER: Screenshot showing browser page being saved with notification]
 
 **Supported Browsers:**
 Works with all 14 supported browsers including Safari, Chrome, Firefox, Edge, Arc, Brave, Vivaldi, Comet, Orion, Atlas, Zen, Wavebox, Dia, and Helium.
@@ -71,8 +74,10 @@ Press **⌘⌃S** in Finder to add selected files and folders:
 - All selected folders
 - Full file system paths
 - File type icons
-
-[PLACEHOLDER: Screenshot showing Finder files being added to sidebar]
+<br />
+<p align="center">
+  <img src="/assets/saved links.jpeg" alt="Saved Links" width="800" />
+</p>
 
 **Multiple Selection:**
 Select as many files/folders as you want → Press **⌘⌃S** → All added at once
@@ -109,8 +114,11 @@ Press **⌘⌃C** to instantly copy the current page URL:
 - Full URL of current page
 - Clean URL (no tracking parameters removed, just raw URL)
 - Ready to paste anywhere
+<br />
+<p align="center">
+  <img src="/assets/smart copy.jpeg" alt="Smart Copy" width="800" />
+</p>
 
-[PLACEHOLDER: Screenshot showing URL being copied from browser]
 
 **Use Cases:**
 - Share links in Slack or email
@@ -140,8 +148,6 @@ Each path on a new line:
 /Users/yourname/Documents/file2.pdf
 /Users/yourname/Downloads/image.png
 ```
-
-[PLACEHOLDER: Screenshot showing file paths in clipboard]
 
 **Use Cases:**
 - Terminal commands: `cat /path/to/file`
