Enhance Spaces documentation with images and details
Updated the 'Spaces' feature documentation to include images and improved instructions.

--- a/content/features/spaces.mdx
+++ b/content/features/spaces.mdx
@@ -13,8 +13,10 @@ Organize your digital life into separate workspaces - one for work, one for pers
 - Reduce cognitive load by showing only relevant links for your current task
 
 ## How It Works
-
-[PLACEHOLDER: Screenshot showing space selector dropdown with Work, Personal, and Learning spaces]
+<br />
+<p align="center">
+  <img src="/assets/saved spaces.jpeg" alt="Saved Spaces" width="800" />
+</p>
 
 Each Space is an independent workspace containing its own set of:
 - Saved links and folders
@@ -31,8 +33,12 @@ Think of Spaces like virtual desktops for your sidebar - completely separate env
 **Work Space**: Company tools, client websites, project documentation
 **Personal Space**: Social media, shopping sites, hobbies
 **Learning Space**: Courses, tutorials, research papers
-
-[PLACEHOLDER: Video showing user switching between spaces and seeing different content]
+<p>
+  Watch this video:
+  <a href="https://youtu.be/tEEDNs0DXZI" target="_blank">
+    Switching of Spaces
+  </a>
+</p>
 
 ## Setup
 
@@ -43,8 +49,6 @@ Think of Spaces like virtual desktops for your sidebar - completely separate env
 3. Name your space (e.g., "Work", "Personal", "Writing")
 4. Optionally set a color for visual distinction
 
-[PLACEHOLDER: Screenshot of new space creation dialog]
-
 ### Setting Default Startup Space
 
 Choose which space opens when you launch SupaSidebar:
@@ -53,7 +57,10 @@ Choose which space opens when you launch SupaSidebar:
 2. Select your preferred **Default startup space**
 3. SupaSidebar will always open to this space
 
-[PLACEHOLDER: Screenshot of space preferences]
+<br />
+<p align="center">
+  <img src="/assets/automation.jpeg" alt="default set up and new space" width="800" />
+</p>
 
 ## Using Spaces
 
@@ -65,8 +72,6 @@ Click the space selector dropdown at the top
 **With Keyboard:**
 - **⌘⌃←** / **⌘⌃→** - Cycle through spaces
 - **⌘⌃1** through **⌘⌃9** - Jump directly to space 1-9
-
-[PLACEHOLDER: Video demonstrating space switching with keyboard shortcuts]
 
 ### Adding Links to Spaces
 
@@ -83,8 +88,10 @@ Each space has its own:
 - **Folders**: Create hierarchical organization
 - **Smart Folders**: Auto-organize with rules
 - **Pinned Items**: Quick-access favorites (shared across all spaces)
-
-[PLACEHOLDER: Screenshot showing folder structure within a space]
+<br />
+<p align="center">
+  <img src="/assets/space and folders.jpeg" alt="space and folders" width="800" />
+</p>
 
 ## Advanced Features
 
@@ -110,21 +117,6 @@ This lets you jump directly to specific spaces without cycling.
    - Optionally force-quits browsers between spaces for clean transitions
 
 [PLACEHOLDER: Screenshot showing tab management settings]
-
-**Warning:** This feature is in beta. Tab restoration works best with Safari and Chrome.
-
-### Space Locking (Premium)
-
-Password-protect sensitive spaces:
-
-1. Right-click a space in the selector
-2. Select **Lock Space**
-3. Set a password
-4. The space will require password entry to access
-
-Perfect for client work or personal privacy.
-
-[PLACEHOLDER: Screenshot showing locked space with password prompt]
 
 ### Live Tabs Filtering
 
