Revise browser integration documentation
Removed sections about use cases and how the integration works, while retaining core features.

--- a/content/features/browserIntegration.mdx
+++ b/content/features/browserIntegration.mdx
@@ -2,27 +2,9 @@
 
 SupaSidebar integrates seamlessly with 14 major web browsers through AppleScript - no extensions needed, just powerful keyboard shortcuts and intelligent automation.
 
-## When to Use
-
-- **Multi-browser workflows**: Work across Safari, Chrome, Firefox, Arc, and more without switching tools
-- **Quick page capture**: Save interesting pages while researching without breaking flow
-- **Cross-browser management**: Track tabs and activity across all your browsers simultaneously
-- **Context-based browsing**: Open work links in Chrome, personal in Safari, dev in Firefox
-- **Extension-free integration**: Enjoy deep browser integration without installing browser extensions
-- **Keyboard-driven efficiency**: Control everything with global shortcuts
-
-## How It Works
-
-SupaSidebar uses AppleScript to communicate with browsers, enabling seamless integration without browser extensions:
-- **Smart Save & Copy**: Context-aware shortcuts that work across all browsers
-- **14 Browsers Supported**: Safari, Chrome, Firefox, Edge, Arc, Brave, and more
-- **Browser Selection**: Choose which browser opens each link
-- **Live Tabs**: Real-time tab tracking across supported browsers
-- **No Configuration**: Works immediately with Automation permissions
-
 ## Core Browser Features
 
-### 1. Smart Shortcuts
+###  Smart Shortcuts
 
 **Context-aware keyboard shortcuts that adapt to your active application**
 
@@ -47,7 +29,7 @@ Press the same shortcuts in any browser or Finder - SupaSidebar automatically do
 
 **Learn more:** [Smart Shortcuts →](smartShortcuts)
 
-### 2. Browser Support
+###  Browser Support
 
 **14 supported browsers with two levels of integration**
 
@@ -67,7 +49,7 @@ SupaSidebar works with Safari, Chrome, Firefox, Edge, Arc, Brave, Vivaldi, Comet
 
 **Learn more:** [Browser Support →](browserSupport)
 
-### 3. Browser Selection
+###  Browser Selection
 
 **Choose which browser opens your saved links**
 
