Revise browser support documentation and features
Removed the 'When to Use' section and updated integration descriptions for clarity. Added details about browser-specific features and setup requirements.

--- a/content/features/browserSupport.mdx
+++ b/content/features/browserSupport.mdx
@@ -2,14 +2,6 @@
 
 SupaSidebar works seamlessly with 14 major web browsers through AppleScript integration - save pages, copy URLs, and track tabs across Safari, Chrome, Firefox, Arc, and more.
 
-## When to Use
-
-- **Multi-browser workflows**: Work across Safari for personal, Chrome for work, Firefox for development
-- **Browser flexibility**: Choose the right browser for each task without losing integration
-- **No extensions needed**: AppleScript-based integration works without installing browser extensions
-- **Cross-browser tracking**: Monitor tabs and activity across all your browsers simultaneously
-- **Browser-specific features**: Take advantage of Live Tabs, URL extraction, and window management
-- **Permission-based control**: Grant access only to browsers you actually use
 
 ## How It Works
 
@@ -29,82 +21,24 @@ All without browser extensions or manual configuration.
 
 SupaSidebar provides two levels of browser integration:
 
-**Basic Integration** - Available for all 14 browsers:
-- Smart Save (⌘⌃S) to save current page
-- Smart Copy (⌘⌃C) to copy URL
-- Open links from sidebar
-- Browser selection and assignment
-- AppleScript-based URL extraction
+**Basic Integration** [smart copy(⌘⌃C) and Smart Save (⌘⌃S)] - Available for all 14 browsers:
 
-**Live Tabs** - Available for 10 browsers:
-- Real-time tab tracking
-- Switch to tabs from sidebar
-- See all open tabs across browsers
-- Close tabs directly from SupaSidebar
-- Tab search in [Command Panel](commandPanel)
-
-### Compatibility Matrix
-
-| Browser | Basic Integration | Live Tabs | Notes |
-|---------|------------------|-----------|-------|
-| **Safari** | ✅ | ✅ | Native AppleScript, fastest and most reliable |
-| **Chrome** | ✅ | ✅ | Full Chromium support, excellent stability |
-| **Firefox** | ✅ | ⏳ | System Events integration, Live Tabs in development |
-| **Edge** | ✅ | ✅ | Chromium-based, full feature support |
-| **Arc** | ✅ | ⏳ | Chromium-based, Live Tabs coming soon |
-| **Brave** | ✅ | ✅ | Chromium-based, full support |
-| **Vivaldi** | ✅ | ✅ | Chromium-based, full support |
-| **Dia** | ✅ | ⏳ | Basic integration works, Live Tabs in development |
-| **Comet** | ✅ | ✅ | Perplexity browser, enhanced URL extraction via Accessibility |
-| **Orion** | ✅ | ✅ | WebKit-based, full support |
-| **Zen Browser** | ✅ | ❌ | Firefox-based, basic integration only |
-| **Atlas** | ✅ | ✅ | ChatGPT browser, full support |
-| **Wavebox** | ✅ | ❌ | Basic integration only |
-| **Helium** | ✅ | ✅ | Full support including Live Tabs |
-
-**Legend:**
-- ✅ **Supported** - Feature works fully
-- ⏳ **In Development** - Feature coming in future update
-- ❌ **Not Available** - Feature not planned or not possible
+**Live Tabs** - Available for 10 browsers(Safari, Chrome, Edge, Brave, Vivaldi, Comet, Orion, Atlas(ChatGPT), Helium):
 
 
 ## Setup
 
 ### Required Permissions
 
-Browser integration requires **Automation permissions**:
+Browser integration requires **Automation permissions** and for Accessibility access for enhanced features:
 
-1. Go to **System Settings → Privacy & Security → Automation**
-2. Find **SupaSidebar** in the list
-3. Enable checkboxes for all browsers you use
-
-<br />
-<p align="center">
-  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
-</p>
-<br />
+**refer to** [Set Up](SetUp)
 
 **First Time Setup:**
 When you first use browser shortcuts, macOS will prompt for permission for each browser. Click **OK** to grant access.
 
 **Grant for All Browsers:**
 Even if you primarily use one browser, enabling all provides flexibility to switch browsers without setup later.
-
-### Optional: Accessibility Permissions
-
-Some browsers benefit from Accessibility access for enhanced features:
-
-**System Settings → Privacy & Security → Accessibility** → Enable SupaSidebar
-
-**Browsers that benefit:**
-- **Comet (Perplexity)**: Enhanced URL extraction from internal URLs
-- **Other browsers**: May improve reliability in edge cases
-<br />
-<p align="center">
-  <img src="/assets/accessibility mouse triggers.jpeg" alt="Accessibility" width="800" />
-</p>
-
-### Verifying Permissions
 
 To test if permissions are working:
 
@@ -114,202 +48,6 @@ To test if permissions are working:
 4. Page should be added to sidebar with notification
 
 If nothing happens, check Automation permissions.
-
-## Browser-Specific Features
-
-### Safari
-
-**Integration Type:** Native AppleScript
-
-**Features:**
-- Fastest and most reliable integration
-- Full Live Tabs support with window and tab enumeration
-- Native title and URL extraction
-- Excellent performance
-
-**Best For:**
-- Primary browser workflows
-- macOS-native experiences
-- Users who prefer Apple ecosystem
-
-### Chrome
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Full AppleScript API support
-- Complete Live Tabs with window tracking
-- Reliable URL and title extraction
-- Browser window adjustment support
-
-**Best For:**
-- Cross-platform workflows
-- Google Workspace users
-- Extension-heavy setups
-
-### Firefox
-
-**Integration Type:** System Events
-
-**Features:**
-- Basic integration via System Events
-- Smart Save and Smart Copy work fully
-- Live Tabs in development (coming soon)
-
-**Best For:**
-- Privacy-focused browsing
-- Open-source preference
-- Developer tools
-
-**Known Limitations:**
-- No Live Tabs yet (⏳ in development)
-- Slightly slower URL extraction than Chromium
-
-### Edge
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Full Chromium support
-- Complete Live Tabs
-- Microsoft ecosystem integration
-- All features work identically to Chrome
-
-**Best For:**
-- Microsoft 365 workflows
-- Windows/Mac cross-platform users
-
-### Arc
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Full basic integration
-- Smart Save and Smart Copy work perfectly
-- Live Tabs coming soon (⏳ in development)
-
-**Best For:**
-- Modern browser UI enthusiasts
-- Workspace-based browsing
-- Power users
-
-### Brave
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Full support including Live Tabs
-- Privacy-focused browser with full integration
-- All standard features work
-
-**Best For:**
-- Privacy-conscious users
-- Ad-blocking by default
-- Crypto/Web3 users
-
-### Vivaldi
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Complete integration with Live Tabs
-- Advanced customization doesn't affect SupaSidebar
-- All features work reliably
-
-**Best For:**
-- Power users with custom workflows
-- Tab management enthusiasts
-- Users who love customization
-
-### Comet (Perplexity)
-
-**Integration Type:** Chromium + Accessibility
-
-**Features:**
-- Full Live Tabs support
-- Enhanced URL extraction using Accessibility API
-- Works around internal URL limitations
-- Requires Accessibility permissions for best results
-
-**Best For:**
-- AI-powered search workflows
-- Research-heavy tasks
-- Perplexity AI users
-
-**Special Setup:**
-Enable Accessibility permissions for enhanced URL extraction:
-**System Settings → Privacy & Security → Accessibility** → SupaSidebar
-
-### Orion
-
-**Integration Type:** WebKit AppleScript
-
-**Features:**
-- Full integration including Live Tabs
-- Native macOS performance
-- Chrome/Firefox extension support
-
-**Best For:**
-- WebKit preference
-- Privacy-focused with extensions
-- Native macOS feel
-
-### Zen Browser
-
-**Integration Type:** Firefox-based
-
-**Features:**
-- Basic integration works fully
-- Smart Save and Smart Copy supported
-- Live Tabs not available (❌)
-
-**Best For:**
-- Zen-mode focused browsing
-- Minimalist interface preference
-
-### Atlas (ChatGPT)
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Full support including Live Tabs
-- ChatGPT browser integration
-- All standard features work
-
-**Best For:**
-- AI assistant workflows
-- ChatGPT power users
-
-### Wavebox
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Basic integration works
-- Smart Save and Smart Copy supported
-- Live Tabs not available (❌)
-
-**Best For:**
-- Multi-account management
-- SaaS application workflows
-
-### Helium
-
-**Integration Type:** Chromium AppleScript
-
-**Features:**
-- Full support including Live Tabs
-- Floating browser windows work with SupaSidebar
-- All standard features supported
-
-**Best For:**
-- Always-on-top browser windows
-- Multi-tasking workflows
-- Floating content viewing
-
-## Multi-Browser Workflows
-
-### Dedicate Browsers to Contexts
 
 Use different browsers for different tasks:
 
@@ -353,14 +91,6 @@ Create [Smart Folders](smartFolders) to organize by browser:
 
 For browsers with Live Tabs support (✅), SupaSidebar provides real-time tab tracking:
 
-**Features:**
-- See all open tabs across supported browsers
-- Switch to any tab instantly
-- Close tabs from sidebar
-- Search tabs in Command Panel
-- Track tab activity in Recent Items
-
-[PLACEHOLDER: Screenshot showing Live Tabs from multiple browsers]
 
 **Supported Browsers for Live Tabs:**
 Safari, Chrome, Edge, Brave, Vivaldi, Comet, Orion, Atlas, Helium (9 browsers)
