Simplify Finder Integration documentation
Removed sections on tips, tricks, and application launching for clarity.

--- a/content/features/finderIntegration.mdx
+++ b/content/features/finderIntegration.mdx
@@ -2,14 +2,6 @@
 
 Add files, folders, and applications directly from Finder to your sidebar with keyboard shortcuts - no drag-and-drop required.
 
-## When to Use
-
-- **Quick folder access**: Add frequently used folders (Documents, Downloads, Projects) for instant navigation
-- **Project organization**: Organize project directories and files by context
-- **App launching**: Add applications for keyboard-driven launching
-- **Path extraction**: Save file paths for documentation, terminal, or sharing
-- **Desktop decluttering**: Keep reference files accessible without desktop clutter
-
 ## How It Works
 
 
@@ -39,17 +31,7 @@ One shortcut, multiple behaviors based on context.
 
 ## Setup
 
-### Required Permissions
-
-Finder integration requires **Automation permissions**:
-
-1. Go to **System Settings → Privacy & Security → Automation**
-2. Find **SupaSidebar** in the list
-3. Enable the **Finder** checkbox
-<br />
-<p align="center">
-  <img src="/assets/automation real.jpeg" alt="Automation Permission" width="800" />
-</p>
+**refer to** : [Set Up](SetUp)
 
 **First Time:**
 When you first use Finder shortcuts, macOS will prompt for permission. Click **OK** to grant access.
@@ -67,7 +49,7 @@ Select multiple files/folders → Press **⌘⌃S** → All added at once
 
 <br />
 <p align="center">
-  <img src="/assets/saved link.jpeg" alt="Saved File" width="800" />
+  <img src="/saved links.jpeg" alt="Saved File" width="800" />
 </p>
 
 **Notification Feedback:**
@@ -118,17 +100,6 @@ Click a file in sidebar → Opens with default application
 
 Click a folder in sidebar → Opens in Finder
 
-### Applications
-Add applications for keyboard-driven launching:
-
-1. Navigate to **Applications** folder in Finder
-2. Select apps (Mail, Slack, Xcode, etc.)
-3. Press **⌘⌃S** to add them
-4. Optionally [pin](pinnedItems) them for ⌘⌥1-9 shortcuts
-
-
-
-## Organization
 
 ### Folders & Hierarchy
 
@@ -149,7 +120,7 @@ Example structure:
 
 <br />
 <p align="center">
-  <img src="/assets/folder.jpeg" alt="folder" width="800" />
+  <img src="/folder.jpeg" alt="folder" width="800" />
 </p>
 
 ### Smart Folders for Files
@@ -170,75 +141,6 @@ All recently added PDFs appear automatically.
 | **⌘⌃S** | Add selected Finder items to sidebar |
 | **⌘⌥A** | Add current Finder folder (ignores selection) |
 | **⌘⌃C** | Copy file paths to clipboard |
-
-## Tips & Tricks
-
-### Quick Folder Access
-Add frequently accessed folders:
-- Downloads folder → Never search for recent downloads
-- Documents folder → Instant access to files
-- Desktop folder → Quick desktop cleanup
-
-### Project Directory Management
-Add all project folders to sidebar:
-1. Navigate to ~/Projects in Finder
-2. Select all project folders
-3. Press **⌘⌃S**
-4. Access any project in one click
-
-### Application Launcher
-Turn SupaSidebar into an app launcher:
-1. Add applications to sidebar
-2. Pin frequently used apps
-3. Launch with ⌘⌥1-9 shortcuts
-
-Faster than Spotlight for your top 9 apps.
-
-### File Path Workflow
-Need file paths for documentation or terminal?
-1. Find files in Finder
-2. Press **⌘⌃C** to copy paths
-3. Paste into documentation, terminal, or scripts
-
-### Temporary File Access
-Add files you need for current project:
-1. Press **⌘⌃S** to add files
-2. Use them throughout the day
-3. Delete from sidebar when project is done
-
-No permanent desktop clutter.
-
-### Folder vs. Selection
-- **⌘⌃S**: Adds what you've selected (files or folders)
-- **⌘⌥A**: Adds the folder you're viewing, ignoring selection
-
-Memorize this distinction for precise control.
-
-## Integration with Other Features
-
-### Combine with Spaces
-Create project-specific spaces:
-- "Client Work" space → Add client folders and files
-- "Personal" space → Add personal documents
-- Keep files organized by context
-
-See [Spaces](spaces) for details.
-
-### Use Smart Folders
-Auto-collect files by type or date:
-- All images added this month
-- All PDF documents
-- All files from specific folder
-
-See [Smart Folders](smartFolders) for setup.
-
-### Pin Critical Folders
-Pin your most-used folders for instant access:
-1. Add folder to sidebar
-2. Pin it
-3. Press ⌘⌥[number] to open in Finder
-
-See [Pinned Items](pinnedItems) for details.
 
 ## Troubleshooting
 
