Simplify floating button documentation
Removed sections on repositioning, multi-display support, customization, tips & tricks, and alternative access methods for the floating button.

--- a/content/features/floatingButton.mdx
+++ b/content/features/floatingButton.mdx
@@ -2,19 +2,11 @@
 
 A persistent, draggable button that floats above all windows for one-click sidebar access - perfect for mouse-driven workflows.
 
-## When to Use
-
-- Prefer visual, mouse-driven access over keyboard shortcuts
-- Want a always-visible reminder that SupaSidebar is available
-- Use tablet or stylus input frequently
-- Work on large displays where keyboard is far from mouse
-- Combine with keyboard shortcuts for hybrid access
-
 ## How It Works
 
 <br />
 <p align="center">
-  <img src="/assets/floatingButton.jpeg" alt="Floating Button" width="800" />
+  <img src="/floating button.jpeg" alt="Floating Button" width="800" />
 </p>
 
 The Floating Button is a small, semi-transparent button that stays visible above all other windows. Click it once to toggle the sidebar - no keyboard needed.
@@ -49,7 +41,7 @@ Floatin Button Drag
 3. Button appears immediately
 <br />
 <p align="center">
-  <img src="/assets/Floating Button Toggle" alt="Floating Button Toggle" width="800" />
+  <img src="/Floating Button Toggle.jpeg" alt="Floating Button Toggle" width="800" />
 </p>
 
 ### No Permissions Required
@@ -73,63 +65,6 @@ Simple, predictable toggle behavior.
 </p>
 
 
-### Repositioning
-
-**Drag to Move:**
-1. Click and hold the button
-2. Drag to desired position
-3. Release to place
-
-**Position Persistence:**
-Your chosen position is saved:
-- Survives app restarts
-- Persists across macOS reboots
-- Separate position for each display
-
-
-### Multi-Display Support
-
-On multi-monitor setups:
-- Button position scales to screen dimensions
-- Automatically adjusts when switching displays
-- Each display can have the button at different relative positions
-
-## Customization
-
-### Button Appearance
-
-The floating button is designed to be subtle:
-- Small circular or icon button
-- Semi-transparent to reduce visual noise
-- Unobtrusive color scheme
-- Respects macOS light/dark mode
-
-No customization options - optimized for minimal distraction.
-
-### Position Presets
-
-**Recommended Positions:**
-
-**Top-Right Corner:**
-- Out of the way of most content
-- Easy to reach with mouse
-- Common position for utility buttons
-
-**Top-Left Corner:**
-- Near macOS menu bar
-- Good for left-handed users
-- Alternative to right corner
-
-**Bottom-Right Corner:**
-- Near macOS Dock area
-- Familiar position for system utilities
-- Easy thumb reach on trackpad
-
-**Bottom-Left Corner:**
-- Away from Dock
-- Alternative for left-handed workflows
-
-
 ## Combining Access Methods
 
 ### Hybrid Workflows
@@ -150,73 +85,6 @@ Use the floating button alongside other access methods:
 - Click button to show sidebar
 - Press **⌘⌃K** for focused search
 - Different tasks, different tools
-
-## Tips & Tricks
-
-### Unobtrusive Positioning
-
-Place button in screen corners you rarely use:
-- Top corners for centered work (writing, design)
-- Bottom corners for top-heavy work (reading, browsing)
-- Opposite side from Dock and notifications
-
-### Large Display Strategy
-
-On ultra-wide or large displays:
-- Position button near center of screen edge
-- Reduces mouse travel distance
-- Faster access than corner positions
-
-### Temporary Disable
-
-Don't want the button during specific tasks?
-1. Open Preferences
-2. Toggle off "Show floating button"
-3. Re-enable later as needed
-
-Faster than repositioning.
-
-### Multi-Monitor Workflows
-
-On multi-monitor setups:
-- Position button near screen edges that face each other
-- Example: Left monitor → button on right edge
-- Easier to hit when moving between displays
-
-### Tablet/Stylus Users
-
-For tablet or stylus input:
-- Floating button is more accessible than keyboard shortcuts
-- Larger click target than menu bar icons
-- Drag to convenient stylus-reachable position
-
-### Touchscreen Macs
-
-On touchscreen-capable Macs (if applicable):
-- Floating button works with touch input
-- Large enough touch target
-- Position in comfortable reach zones
-
-## Alternative Access Methods
-
-If the floating button isn't for you, try:
-
-**Keyboard Shortcuts:**
-- **⌘⇧Space** - Toggle sidebar
-- See [Global Shortcuts](globalShortcuts) for complete list
-
-**Mouse Triggers:**
-- Move mouse to screen edge to show sidebar
-- See [Mouse Triggers](mouseTriggers) for setup
-
-**Menu Bar Icon:**
-- Click SupaSidebar icon in menu bar
-- Select "Show Sidebar"
-
-**Browser Auto-Visibility:**
-- Sidebar appears automatically when browsers activate
-- See [Browser Integration](browserIntegration#browser-auto-visibility)
-
 
 ## Troubleshooting
 
